# taglog

./: .gitignore  CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  bench.cpp  stdcout_vs_win32writeconsole.cpp
include/taglog/: common.hpp  logger-inl.hpp  logger.hpp  taglog-inl.hpp  taglog.hpp
include/taglog/details/: log_msg-inl.hpp  log_msg.hpp
include/taglog/sinks/: sink.hpp
